k8s/service.yaml
apiVersion: v2
kind: Service
metadata:
  name: node-service
spec:
  selector:
    app: node
  ports:
    - port: 80
      targetPort: 3000
  type: NodePort
